[package]
name = "c03_control_fn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["control-flow", "functions", "closures", "iterators"]
categories = ["no-std", "development-tools::testing"]
description = "Rust control flow and functions learning module"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[features]
simd = []

[lints.rust]
# 声明 Kani 验证使用的 cfg 条件名，避免 unexpected_cfgs 警告
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lib]
name = "c03_control_fn"
path = "src/lib.rs"

[[bin]]
name = "cf"
path = "src/bin/main.rs"

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "control_flow_benchmarks"
harness = false
