[package]
name = "c04_generic"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.94.1"


authors = ["Rust Learning Community"]
description = "Rust generics and trait system learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
itertools = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
array-init = "2.1.0"
futures = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }


[lib]
name = "c04_generic"
path = "src/lib.rs"

[[bin]]
name = "c04_generic"
path = "src/bin/main.rs"

[[bench]]
name = "micro_benchmarks"
harness = false

[[bench]]
name = "rust_192_benchmarks"
harness = false
