[package]
name = "c04_generic"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
keywords = ["generics", "traits", "type-system", "monomorphization"]
categories = ["no-std", "development-tools::testing"]
description = "Rust generics and trait system learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)', 'cfg(kani)'] }

[lib]
name = "c04_generic"
path = "src/lib.rs"

[[bin]]
name = "c04_generic"
path = "src/bin/main.rs"

[[bench]]
name = "rust_192_benchmarks"
harness = false

[[bench]]
name = "generic_ecosystem_benchmarks"
harness = false
