[package]
name = "c04_generic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["generics", "traits", "type-system", "monomorphization"]
categories = ["no-std", "development-tools::testing"]
description = "Rust generics and trait system learning module"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)', 'cfg(kani)'] }

[lib]
name = "c04_generic"
path = "src/lib.rs"

[[bin]]
name = "c04_generic"
path = "src/bin/main.rs"

[[bench]]
name = "rust_192_benchmarks"
harness = false

[[bench]]
name = "generic_ecosystem_benchmarks"
harness = false
