[package]
name = "c05_threads"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
description = "Rust concurrency and threading learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
crossbeam = { workspace = true }
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
crossbeam-epoch = "0.9.18"
crossbeam-deque = "0.8.6"
rayon = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
flume = "0.12.0"
tokio = { workspace = true, optional = true }
num_cpus = { workspace = true }
libc = { workspace = true }
windows = { version = "0.62.1", features = ["Win32_System_Threading"], optional = true }
once_cell = { workspace = true }
common = { workspace = true, features = ["error-trait", "async"] }

[features]
default = ["std"]
std = []
tokio = ["tokio/full"]
windows = ["windows/Win32_System_Threading"]
unstable = []
custom_ring_buffers = []
work_stealing_examples = []

[lib]
name = "c05_threads"
path = "src/lib.rs"

[[bin]]
name = "c05_threads"
path = "src/bin/main.rs"

[dev-dependencies]
criterion = { workspace = true }
loom = { version = "0.7.2", default-features = false }
tokio = { workspace = true }

[[bench]]
name = "priority_channels_bench"
harness = false

[[bench]]
name = "backpressure_bench"
harness = false

[[bench]]
name = "rust_192_benchmarks"
harness = false

[[bench]]
name = "false_sharing_bench"
harness = false
