[package]
name = "c05_threads"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
keywords = ["concurrency", "threading", "sync", "parallelism"]
categories = ["concurrency", "development-tools::testing"]
description = "Rust concurrency and threading learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
crossbeam = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = { workspace = true }
crossbeam-epoch = { workspace = true }
crossbeam-deque = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, optional = true }
num_cpus = { workspace = true }
libc = { workspace = true }
windows = { version = "0.62.2", features = ["Win32_System_Threading"], optional = true }
once_cell = { workspace = true }
common = { workspace = true, features = ["error-trait", "async"] }
thiserror = { workspace = true }

[features]
default = ["std"]
std = []
tokio = ["tokio/full"]
windows = ["windows/Win32_System_Threading"]
unstable = []
custom_ring_buffers = []
work_stealing_examples = []

[lib]
name = "c05_threads"
path = "src/lib.rs"

[[bin]]
name = "c05_threads"
path = "src/bin/main.rs"

[dev-dependencies]
criterion = { workspace = true }
loom = { version = "0.7.2", default-features = false }
tokio = { workspace = true }

[[bench]]
name = "priority_channels_bench"
harness = false

[[bench]]
name = "backpressure_bench"
harness = false

[[bench]]
name = "rust_192_benchmarks"
harness = false

[[bench]]
name = "false_sharing_bench"
harness = false

[lints.clippy]
let_and_return = "deny"
non_minimal_cfg = "deny"

[package.metadata.cargo-machete]
ignored = ["libc", "windows"]
