[package]
name = "c06_async"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.93"

[dependencies]
# 异步运行时 - 使用工作区统一版本
tokio = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

# 日志和追踪 - 使用工作区统一版本
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# 并发原语 - 更新到最新版本
parking_lot = { workspace = true }

# Web框架 - 更新到最新版本
actix-web = { workspace = true }
actix = { workspace = true }
actix-rt = { workspace = true }

# 日志 - 2025年10月15日最新版本
env_logger = "0.11.8"

# 其他工具 - 使用工作区统一版本
uuid = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
prometheus = { workspace = true }
once_cell = "1.21"

# Rust 1.90 新特性支持
num_cpus = { workspace = true }
async-trait = { workspace = true }
rayon = { workspace = true }

# 高级异步特性支持 - 2025年10月15日最新版本
lru = "0.16.2"

# 异步生态系统分析支持
chrono = { workspace = true }
# 轻量级异步运行时 - 2025年10月15日最新版本
smol = "2.0.2"

# 性能优化库
bytes = "1.8"

# Smol 轻量生态（高级案例）- 2025年10月15日最新版本
async-io = "2.6.0"
async-channel = "2.5.0"
surf = "2.3.2"

# 分布式与微服务（高级案例）- 2025年10月20日最新版本
redis = { version = "1.0.0-rc.3", features = ["tokio-comp", "connection-manager"] }
dashmap = "7.0.0-rc2"
backoff = { version = "0.4.0", features = ["tokio"] }

# 终端和调试工具 - 更新到最新版本
tokio-console = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }

# Web框架 - 使用工作区统一版本
axum = { workspace = true }
http = { workspace = true }
tower = { workspace = true }

# 可选 Actor 框架（默认不启用）
bastion = { version = "0.4.5", optional = true }
xtra = { version = "0.6", optional = true }

# Glommio 高性能运行时 (基于 io_uring, Linux only) - 2025年10月30日最新版本
[target.'cfg(target_os = "linux")'.dependencies]
glommio = "0.9.0"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }

[lib]
name = "c06_async"
path = "src/lib.rs"

[[bin]]
name = "c06_async"
path = "src/bin/main.rs"

[features]
# 可选启用的 Actor 框架集成
bastion = ["dep:bastion"]
xtra = ["dep:xtra"]
