[package]
name = "c06_async"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
description = "Rust asynchronous programming learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
common = { workspace = true, features = ["serde", "error-trait", "async"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
actix-web = { workspace = true }
actix = { workspace = true }
actix-rt = { workspace = true }
env_logger = "0.11.8"
uuid = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
prometheus = { workspace = true }
once_cell = { workspace = true }
num_cpus = { workspace = true }
async-trait = { workspace = true }
rayon = { workspace = true }
lru = { workspace = true }
chrono = { workspace = true }
smol = "2.0.2"
bytes = { workspace = true }
async-io = "2.6.0"
async-channel = "2.5.0"
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
dashmap = { workspace = true }
# 2026-04-27: backoff 0.4.0 已标记为 unmaintained (RUSTSEC-2025-0012)
#       建议未来替换为 backon 或 tokio-retry
backoff = { version = "0.4.0", features = ["tokio"] }
tokio-console = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
axum = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
bastion = { version = "0.4.5", optional = true }
xtra = { version = "0.6", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
glommio = "0.9.0"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }

[lib]
name = "c06_async"
path = "src/lib.rs"

[[bin]]
name = "c06_async"
path = "src/bin/main.rs"

[features]
bastion = ["dep:bastion"]
xtra = ["dep:xtra"]
