[package]
name = "c06_async"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
keywords = ["async", "tokio", "futures", "runtime"]
categories = ["asynchronous", "network-programming"]
description = "Rust asynchronous programming learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
tokio = { workspace = true, features = ["tracing"] }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
common = { workspace = true, features = ["serde", "error-trait", "async"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
actix = { workspace = true }
actix-rt = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
prometheus = { workspace = true }
num_cpus = { workspace = true }
async-trait = { workspace = true }
rayon = { workspace = true }
lru = { workspace = true }
chrono = { workspace = true }
smol = "2.0.2"
bytes = { workspace = true }
async-io = "2.6.0"
async-channel = "2.5.0"
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
dashmap = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid"] }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio"] }
# 2026-05-01: backoff 0.4.0 已替换为内部实现（RUSTSEC-2025-0012）
# 原 backoff crate 被标记为 unmaintained，现使用 c06_async::utils::backoff 模块替代

crossterm = { workspace = true, features = ["event-stream"] }
axum = { workspace = true }
tower = { workspace = true }

xtra = { version = "0.6", optional = true, features = ["tokio"] }

[target.'cfg(target_os = "linux")'.dependencies]
glommio = "0.9.0"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
tower = { workspace = true, features = ["limit", "buffer"] }
env_logger = { workspace = true }

[lib]
name = "c06_async"
path = "src/lib.rs"

[[bin]]
name = "c06_async"
path = "src/bin/main.rs"

[features]

xtra = ["dep:xtra"]
nightly_async_closures = []
nightly_afidt = []
