[package]
name = "c07_process"
version = "0.1.0"
edition = "2024"
resolver = "3"
authors = ["Rust Process Management Team"]
description = "Comprehensive process management, IPC, and synchronization library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/c07_process"
keywords = ["process", "ipc", "synchronization", "system-programming"]
categories = ["system-programming", "concurrency"]
rust-version = "1.92"

[dependencies]
# 核心异步运行时（可选）
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

# 序列化支持
serde = { workspace = true }
serde_json = { workspace = true }

# 系统调用和平台特定功能
nix = { version = "0.30.1", features = ["process", "user", "signal"], optional = true }
libc = { workspace = true }

# 内存映射和共享内存
memmap2 = "0.9.9"
shared_memory = "0.12.4"

# 信号处理
signal-hook = "0.3.18"

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 日志记录
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 时间处理
chrono = { workspace = true }

# 配置管理
config = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "c07_process"
path = "src/lib.rs"

[[bin]]
name = "c07_process"
path = "src/bin/main.rs"

[[bin]]
name = "process_demo"
path = "src/bin/process_demo.rs"

[[bin]]
name = "ipc_demo"
path = "src/bin/ipc_demo.rs"

[[bin]]
name = "sync_demo"
path = "src/bin/sync_demo.rs"

[[bin]]
name = "process_pool_demo"
path = "src/bin/process_pool_demo.rs"

[[bin]]
name = "async_demo"
path = "src/bin/async_demo.rs"

[[bin]]
name = "timeout_demo"
path = "src/bin/timeout_demo.rs"

[[bin]]
name = "stdio_demo"
path = "src/bin/stdio_demo.rs"

[[bin]]
name = "supervisor_demo"
path = "src/bin/supervisor_demo.rs"

[[bin]]
name = "group_demo"
path = "src/bin/group_demo.rs"

[[bin]]
name = "async_stdio_demo"
path = "src/bin/async_stdio_demo.rs"

[[bin]]
name = "group_control_demo"
path = "src/bin/group_control_demo.rs"

[[bin]]
name = "rust_190_features_demo"
path = "src/bin/rust_190_features_demo.rs"

[[bin]]
name = "enhanced_async_demo"
path = "src/bin/enhanced_async_demo.rs"

[[bin]]
name = "enhanced_ipc_demo"
path = "src/bin/enhanced_ipc_demo.rs"

[[bin]]
name = "enhanced_sync_demo"
path = "src/bin/enhanced_sync_demo.rs"

[[bin]]
name = "enhanced_error_demo"
path = "src/bin/enhanced_error_demo.rs"

[features]
default = ["std", "async"]
std = []
async = ["tokio", "tokio-util", "futures"]
futures = ["dep:futures"]
unix = ["nix"]
windows = []
full = ["std", "async", "unix", "windows"]
