[package]
name = "c08_algorithms"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
description = "Rust algorithms learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
num_cpus = { workspace = true }
tokio-stream = { workspace = true }
petgraph = { workspace = true, optional = true }
aho-corasick = { version = "1.0", optional = true }

[features]
default = []
with-petgraph = ["petgraph"]
with-aho = ["aho-corasick"]


[dev-dependencies]
criterion = { workspace = true }

[lib]
name = "c08_algorithms"
path = "src/lib.rs"

[[bin]]
name = "algo"
path = "src/bin/main.rs"

[[bench]]
name = "algorithm_benchmarks"
harness = false

[[bench]]
name = "alg_benches"
harness = false

[[bench]]
name = "ml_benchmarks"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "simple_benchmarks"
harness = false
