[package]
name = "c08_algorithms"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
keywords = ["algorithms", "data-structures", "sorting", "searching"]
categories = ["algorithms", "development-tools::testing"]
description = "Rust algorithms learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
num_cpus = { workspace = true }
tokio-stream = { workspace = true }
petgraph = { workspace = true, optional = true }
aho-corasick = { version = "1.1.4", optional = true }
[features]
default = []
with-petgraph = ["petgraph"]
with-aho = ["aho-corasick"]
# portable_simd 需要 nightly 编译器，默认不启用
portable_simd = []


[dev-dependencies]
criterion = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
egui = { workspace = true }
eframe = { version = "0.34.3", default-features = false, features = ["default"] }

[lib]
name = "c08_algorithms"
path = "src/lib.rs"

[[bin]]
name = "algo"
path = "src/bin/main.rs"

[[bench]]
name = "algorithm_benchmarks"
harness = false

[[bench]]
name = "alg_benches"
harness = false

[[bench]]
name = "ml_benchmarks"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "simple_benchmarks"
harness = false

[[example]]
name = "ai_ml_ecosystem_demo"
