[package]
name = "c09_design_pattern"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
description = "Rust design patterns learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
tokio-bench = []
futures = []

[dev-dependencies]
criterion = { workspace = true }

[lib]
name = "c09_design_pattern"
path = "src/lib.rs"

[[bin]]
name = "dp"
path = "src/bin/main.rs"

[[bench]]
name = "async_gats_benches"
harness = false

[[bench]]
name = "pattern_benchmarks"
harness = false

[[bench]]
name = "pattern_scenarios"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false
