[package]
name = "c09_design_pattern"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.1"
authors = ["Rust Learning Community"]
keywords = ["design-patterns", "idiomatic-rust", "architecture"]
categories = ["development-tools::testing"]
description = "Rust design patterns learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
libloading = "0.8"

[features]
tokio-bench = []
futures = []

[dev-dependencies]
criterion = { workspace = true }
hecs = "0.11"

[lib]
name = "c09_design_pattern"
path = "src/lib.rs"

[[bin]]
name = "dp"
path = "src/bin/main.rs"

[[bench]]
name = "async_gats_benches"
harness = false

[[bench]]
name = "pattern_benchmarks"
harness = false

[[bench]]
name = "pattern_scenarios"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "pattern_search_benchmarks"
harness = false
