[package]
name = "c09_design_pattern"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["design-patterns", "idiomatic-rust", "architecture"]
categories = ["development-tools::testing"]
description = "Rust design patterns learning module"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
# 2026-07-11: 0.8 -> 0.9 (cargo update 提示落后最新，plugin_dynamic_loading 示例已验证)
libloading = "0.9"

[features]
tokio-bench = []
futures = []

[dev-dependencies]
criterion = { workspace = true }
hecs = "0.11"

[lib]
name = "c09_design_pattern"
path = "src/lib.rs"

[[bin]]
name = "dp"
path = "src/bin/main.rs"

[[bench]]
name = "async_gats_benches"
harness = false

[[bench]]
name = "pattern_benchmarks"
harness = false

[[bench]]
name = "pattern_scenarios"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "pattern_search_benchmarks"
harness = false
