[package]
name = "c10_networks"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
description = "Rust networking learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic = { workspace = true }
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
protoc-bin-vendored = "3.1.0"

[dev-dependencies]
criterion = { workspace = true }

[lib]
name = "c10_networks"
path = "src/lib.rs"

[[bin]]
name = "net"
path = "src/bin/main.rs"

[[bench]]
name = "concurrency_performance"
harness = false

[[bench]]
name = "error_handling_performance"
harness = false

[[bench]]
name = "memory_performance"
harness = false

[[bench]]
name = "network_benchmarks"
harness = false

[[bench]]
name = "packet_performance"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "protocol_performance"
harness = false
