[package]
name = "c10_networks"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
description = "Rust networking learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
hickory-resolver = { workspace = true }
hickory-proto = { workspace = true }
nom = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = { workspace = true }
tonic-prost = { workspace = true }
url = { workspace = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.0", optional = true }

# PCAP support (optional)
pcap = { version = "2.2", optional = true }

# pnet support (optional)
pnet_datalink = { version = "0.35", optional = true }
pnet_packet = { version = "0.35", optional = true }
pnet_base = { version = "0.35", optional = true }
pnet_macros_support = { version = "0.35", optional = true }

[features]
default = []
tls = ["rustls", "rustls-pemfile"]
# PCAP-related features for conditional compilation
sniff = ["pcap", "pnet"]
pcap = ["dep:pcap", "dep:pnet_packet", "dep:pnet_base"]
pnet = ["dep:pnet_packet", "dep:pnet_base", "dep:pnet_macros_support"]
# Sub-features for specific pcap functionality
pcap_live = ["sniff", "pcap"]
offline = ["sniff", "pcap"]

[build-dependencies]
tonic = { workspace = true }
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
protoc-bin-vendored = "3.1.0"

[dev-dependencies]
criterion = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
libp2p = { workspace = true, features = ["ping", "macros"] }
bincode = { workspace = true }
aes-gcm = "0.10"
sha2 = { workspace = true }
lru = { workspace = true }
chrono = { workspace = true }

[lib]
name = "c10_networks"
path = "src/lib.rs"

[[bin]]
name = "net"
path = "src/bin/main.rs"

[[bench]]
name = "concurrency_performance"
harness = false

[[bench]]
name = "error_handling_performance"
harness = false

[[bench]]
name = "memory_performance"
harness = false

[[bench]]
name = "network_benchmarks"
harness = false

[[bench]]
name = "packet_performance"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "protocol_performance"
harness = false
