[package]
name = "c10_networks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["networking", "http", "grpc", "web"]
categories = ["network-programming", "asynchronous"]
description = "Rust networking learning module"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
# async-trait 已迁移至原生 AFIT (1.75+)
# libp2p 为可选依赖，通过 feature 启用
libp2p = { workspace = true, features = ["ping", "macros", "relay", "autonat", "dcutr"], optional = true }
# 锁定 multibase 0.9.2，防止 libp2p 传递依赖升级到 0.9.3 引入 base45
multibase = { workspace = true, optional = true }
hickory-resolver = { workspace = true }
hickory-proto = { workspace = true }
nom = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-stdout = { workspace = true }
tokio-tungstenite = { workspace = true }
tonic-prost = { workspace = true }
url = { workspace = true }
rustls = { workspace = true, optional = true }

# Kafka support (optional, requires librdkafka build environment)
# 2026-07-11: 锁定 0.37 (0.39 已发布但为 0.x 破坏性升级，且需 librdkafka/cmake 环境验证，
#       Windows 主机无法编译验证，故保守保持；kafka 为可选 feature)
rdkafka = { version = "0.37", features = ["tokio"], optional = true }

# Kubernetes ecosystem examples
kube = { version = "4.0.0", features = ["client", "runtime", "derive"], optional = true }
k8s-openapi = { version = "0.28.0", features = ["latest"], optional = true }


# QUIC / HTTP3 支持
quinn = { version = "0.11.9", optional = true }
rcgen = { workspace = true, optional = true }

# PCAP support (optional)
pcap = { version = "2.4.0", optional = true }

# pnet support (optional)
pnet_datalink = { version = "0.35", optional = true }
pnet_packet = { version = "0.35", optional = true }
pnet_base = { version = "0.35", optional = true }
pnet_macros_support = { version = "0.35", optional = true }

# Search / vector database / document-graph database ecosystem examples
meilisearch-sdk = { version = "0.33.0", default-features = false, features = ["reqwest", "tls"], optional = true }
surrealdb = { version = "3.2.0", default-features = false, features = ["protocol-ws", "rustls"], optional = true }
vector = { version = "0.4.1", optional = true }

# Cloud vendor SDK examples
# 禁用默认 features，避免 aws-sdk-s3 默认启用 legacy-rustls（rustls 0.21）引入 RUSTSEC-2026-0098/0099/0104
aws-config = { version = "1.9.0", optional = true, default-features = false, features = ["default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-sdk-s3 = { version = "1.138.0", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
azure_core = { version = "1.0.0", optional = true }
azure_identity = { version = "1.0.0", optional = true }
azure_storage_blob = { version = "1.0.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# io_uring 仅 Linux 可用
# 2026-06-08: tokio-uring 0.5.0 (crates.io 最新版) 锁定 io-uring ^0.6.0，无法升级至 0.7.x
#       验证: tokio-uring 无新版本发布，状态未变
# 2026-07-11 复核: io-uring 0.7.13 已发布但 builder API 有破坏性变更且 tokio-uring 0.5 仍锁定 ^0.6，
#       继续保持 0.6 (非本仓库可直接修复项)
tokio-uring = { version = "0.5", optional = true }
io-uring = { version = "0.6", optional = true }

[features]
default = []
tls = ["rustls"]
quic = ["dep:quinn", "dep:rcgen", "tls"]
# io_uring 仅在 Linux 下有效
io-uring = ["dep:tokio-uring", "dep:io-uring"]
# PCAP-related features for conditional compilation
sniff = ["pcap", "pnet"]
pcap = ["dep:pcap", "dep:pnet_packet", "dep:pnet_base"]
pnet = ["dep:pnet_packet", "dep:pnet_base", "dep:pnet_macros_support"]
# Sub-features for specific pcap functionality
pcap-live = ["sniff", "pcap"]
offline = ["sniff", "pcap"]
libp2p = ["dep:libp2p", "dep:multibase"]
# Kafka ecosystem examples
kafka = ["dep:rdkafka"]
# Kubernetes ecosystem examples
kube-rs = ["dep:kube", "dep:k8s-openapi"]
# Search / database ecosystem examples
meilisearch = ["dep:meilisearch-sdk"]
surrealdb = ["dep:surrealdb"]
vector-db = ["dep:vector"]
# Cloud vendor SDK examples
aws-sdk = ["dep:aws-config", "dep:aws-sdk-s3"]
azure-sdk = ["dep:azure_core", "dep:azure_identity", "dep:azure_storage_blob"]

[build-dependencies]
tonic = { workspace = true }
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
protoc-bin-vendored = "3.2.0"  # 2026-06-19: 3.1.0 -> 3.2.0

[dev-dependencies]
criterion = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
ring = { workspace = true }
# 2026-07-04: cargo update 后同步到当前解析版本
mongodb = "3.7.0"
# 2026-07-11: 锁定 2.5.5 (lapin 3.x/4.x 为大版本 API 重写，amq-protocol 生态尚未迁移；
#       作为 dev-dependency 仅用于示例，保守保持)
lapin = "2.5.5"
# 2026-07-08: kube 0.98 -> 4.0.0，k8s-openapi 0.24 -> 0.25，消除 backoff unmaintained 传递依赖

# 2026-07-11: 锁定 0.10 (aes-gcm 0.11 已发布但切换至 aead 0.6 / hybrid-array 新栈；
#       cookie/sqlx 生态仍在 aead 0.5 + digest 0.10，保守保持)
aes-gcm = "0.10"
sha2 = { workspace = true }
lru = { workspace = true }
chrono = { workspace = true }

[lib]
name = "c10_networks"
path = "src/lib.rs"

[[bin]]
name = "net"
path = "src/bin/main.rs"

[[example]]
name = "p2p_minimal"
required-features = ["libp2p"]

[[example]]
name = "kafka_async_producer"
required-features = ["kafka"]

[[example]]
name = "kafka_consumer_group"
required-features = ["kafka"]

[[example]]
name = "kube_list_pods"
required-features = ["kube-rs"]

[[example]]
name = "kube_watch_pods"
required-features = ["kube-rs"]

[[example]]
name = "meilisearch_basic_search"
required-features = ["meilisearch"]

[[example]]
name = "surrealdb_basic_crud"
required-features = ["surrealdb"]

[[example]]
name = "vector_hnsw_search"
required-features = ["vector-db"]

[[example]]
name = "aws_s3_list_buckets"
required-features = ["aws-sdk"]

[[example]]
name = "aws_sdk_list_buckets"
required-features = ["aws-sdk"]

[[example]]
name = "azure_blob_list_containers"
required-features = ["azure-sdk"]

[[bench]]
name = "concurrency_performance"
harness = false

[[bench]]
name = "error_handling_performance"
harness = false

[[bench]]
name = "memory_performance"
harness = false

[[bench]]
name = "network_benchmarks"
harness = false

[[bench]]
name = "packet_performance"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "protocol_performance"
harness = false

[package.metadata.cargo-machete]
ignored = ["hickory-proto", "pnet_base", "pnet_macros_support", "prost", "tonic-prost"]
